adds integration testing to file

--- a/views/input.erb
+++ b/views/input.erb
@@ -1,6 +1,6 @@
 <h1>Check numbers to types of triangles</h1>
 
-<form action="output">
+<form action="/output" method="post">
   <div class="form-group">
     <label for="side1">Side 1:</label>
     <input id="side1" name="side1" class="form-control" type="number">
